| Bug #57767 | Ouf of buffer causes data node to stop | ||
|---|---|---|---|
| Submitted: | 27 Oct 2010 11:29 | Modified: | 29 Oct 2010 10:14 |
| Reporter: | Geert Vanderkelen | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S2 (Serious) |
| Version: | mysql-5.1-telco-6.3 | OS: | Any |
| Assigned to: | CPU Architecture: | Any | |
[27 Oct 2010 11:29]
Geert Vanderkelen
[27 Oct 2010 11:38]
Geert Vanderkelen
It's not an overrun :)
[28 Oct 2010 12:41]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/122197 3325 Jonas Oreland 2010-10-28 ndb - bug#57767 - Handle out of tupkey buffer "gracefully" (kill starting node instead of self) during node-recovery
[28 Oct 2010 13:00]
Bugs System
Pushed into mysql-5.1-telco-6.3 5.1.51-ndb-6.3.39 (revid:jonas@mysql.com-20101028124039-udjlkla6iwmczkti) (version source revid:jonas@mysql.com-20101028124039-udjlkla6iwmczkti) (merge vers: 5.1.51-ndb-6.3.39) (pib:21)
[28 Oct 2010 13:02]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.51-ndb-7.0.20 (revid:jonas@mysql.com-20101028125931-u94cg0u2cytx1a42) (version source revid:jonas@mysql.com-20101028125931-u94cg0u2cytx1a42) (merge vers: 5.1.51-ndb-7.0.20) (pib:21)
[28 Oct 2010 13:05]
Jonas Oreland
pushed to 6.3.39 7.0 & 7.1 already fixed
[29 Oct 2010 10:14]
Jon Stephens
Documented in the NDB-6.3.39 changelog as follows:
An internal buffer overrun could cause a data node to fail.
Closed.
